# dmz-agents

./: .gitignore  .nixpacks.toml  Dockerfile  README.md  check_db.py  fix_tasks.py  get_last_msg.py  install.ps1  install.sh  netlify.toml  package-lock.json  package.json  railway.toml  requirements.txt  test_db.py  test_regex.js  test_rt.py  test_rt2.py  test_supa.py  text.txt  tsconfig.json
_dmz-agents-backup/dmz-agents-main-v1/: README.md  install.sh  package-lock.json
_dmz-agents-backup/dmz-agents-main-v1/cli/: README.md
_dmz-agents-backup/dmz-agents-main-v1/docs/: ENV_REFERENCE.md  dmz-agents-light.jsx  dmz-os-squad-about.jsx  populate_agents.sql
_dmz-agents-backup/dmz-agents-main-v1/server/: railway.toml
_dmz-agents-backup/dmz-agents-main-v2/: README.md  fix_schema.py  package-lock.json  package.json
_dmz-agents-backup/dmz-agents-main-v2/docs/: dmz-agents-database.docx  setup_supabase.sql
_dmz-agents-backup/dmz-agents-main-v2/scripts/: sync_all_agents.py
_dmz-agents-backup/dmz-agents-main-v2/server/: main.py
cli/: README.md  pyproject.toml
cli/.agents/: README.md  requirements.txt
cli/dmz_os/: __init__.py  __main__.py  main.py
cli/dmz_os.egg-info/: PKG-INFO  SOURCES.txt
cli/dmz_os/commands/: ask.py  install.py  mcp.py  start.py  status.py  tasks.py
cli/dmz_os/engine/: agent.py  orchestrator.py
cli/dmz_os/mcp_server/: __init__.py  __main__.py  server.py
docs/: ARCHITECTURE_CLOUD_LOCAL.md  BACKLOG.md  BOARD.md  GETTING_STARTED.md  MASTER_PLAN.md  ON_GOING.md  RENDER_ARTIFACTS_PLAN.md  TASKS_CHECKLIST.md  como-claude-renderiza.md  instruir-agentes-html-ui-qualidade.md  libs-cdn-iframe-design-system.md  populate_agents.sql  seed_prompts.sql
docs/capabilities/: alex_prompt.md  emma_prompt.md  emma_skills.md  jose-prompt.md  jose-tools.md  kanya-prompt.md  kanya-tools.md  oliver_skills.md  oliver_tools.md  syd-skills.md  theron_skills.md  victoria_skills.md
docs/capabilities/agent-prd-clara/: PRD_AGENT_CLARA_COMPLETO.md  prd_agent_prompt.md  prd_agent_skills.md  prd_agent_tools.md
public/: install.sh  robots.txt  sitemap.xml
scripts/: audit_prompts.js  get_schema.py  incorporate_sales.py  populate_missing_prompts.js  sync_prompts.js  upsert_nodes.js
server/: Dockerfile  main.py  railway.toml  requirements.txt  run_sql.js  start.sh  test_db.py  test_empty.py  test_expired.py  webhook_telegram.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/: AgentDetails.tsx  (+1 more)
src/components/: AppHeader.tsx  GoogleAnalytics.tsx  PublicLayout.tsx
supabase/migrations/: 20260304203000_add_feedback_column.sql  20260314122600_add_task_assignees_table.sql
(+192 files in other folders)
